# selenium-webdriver-at-spi

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  SeleniumWebDriverATSPIConfig.cmake.in  app.py  app_roles.py  calculatortest.py  requirements.txt  run.rb  run.sh  selenium-webdriver-at-spi.py
appidlister/: CMakeLists.txt  main.cpp  org.kde.selenium-webdriver-at-spi-appidlister.desktop.cmake
autotests/: CMakeLists.txt  clipboardtest.py  dbustest.py  imagecomparison.qml  imagecomparisontest.py  pointerinput.qml  pointerinputtest.py  screenshottest.py  textinput.qml  textinputtest.py  value.qml  valuetest.py
autotests/appiumtests/: .kde-ci.yml  CMakeLists.txt  calculatortest.py  clipboardtest.py  kinfocentertest.rb  screenshottest.py  shiftsynthesizertest.rb  textinputtest.py  valuetest.py
cmake/: FindPython3.cmake  FindPythonModule.cmake.in  FindRuby.cmake  Findat-spi-bus-launcher.cmake  Findat-spi2-registryd.cmake
examples/: calculatortest.py  kinfocentertest.rb
inputsynth/: CMakeLists.txt  inputcapture_dbustypes.h  interaction.cpp  interaction.h  interface.cpp  interface.h  main.cpp  org.freedesktop.portal.InputCapture.xml  org.kde.selenium-webdriver-at-spi-inputsynth.desktop.cmake
positionofapp/: CMakeLists.txt  main.cpp  org.kde.selenium-webdriver-at-spi-positionofapp.desktop.cmake
screenshotter/: CMakeLists.txt  main.cpp  org.kde.selenium-webdriver-at-spi-screenshotter.desktop.cmake
snaptests/: README.md  snap-test-in-vm-companion.sh  snap-test-in-vm.sh
videorecorder/: CMakeLists.txt  main.cpp  org.kde.selenium-webdriver-at-spi-recorder.desktop.cmake  screencasting.cpp  screencasting.h
